sass/components/_navigation.scss
/** NAVBAR **/
.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 126px;
    padding: 0 120px 0 70px;
    

    &--left {
        display: flex;
        align-items: center;
        gap: 115px;

        .nav__logo {
            font-size: 24px;
            font-weight: 500;
            z-index: 102;
        }

        .nav__links {
            display: flex;
            gap: 47px;
            font-size: 14px;

            .nav__link {
                color: $text-color;
                text-decoration: none;
                position: relative;
                transition: .2s all ease-in-out;

                a {
                    text-decoration: none;
                    color: inherit;
                }

                &::after {
                    content: '';
                    position: absolute;
                    bottom: -102%;
                    left: 50%;
                    width: 2px;
                    height: 20px;
                    background-color: $additional-color;
                    opacity: 0;
                    transition: .2s all ease-in-out;
                }

                &:hover, &.active {
                    color: $additional-color;
                    font-weight: 600;

                    &::after {
                        opacity: 1;
                    }
                }
            }
        }
    }

    &--right {
        display: flex;
        align-items: center;
        justify-content: flex-end;
        font-size: 14px;

        .nav__contact {
            color: #9F9F9F;

            span {
                color: $additional-color;
                margin-left: 9px;
            }
        }

        .nav__language {
            display: flex;
            align-items: center;
            gap: 6.5px;
            margin-left: 22px;

            p {
                span {
                    transform: rotate(90deg);
                }
            }
        }

        .nav__button {
            color: $additional-color;
            border: 1px solid $additional-color;
            padding: 13px 29px;
            border-radius: 21.5px;
            transition: .2s all ease-in-out;
            margin-left: 45.5px;

            &:hover {
                background-color: $additional-color;
                color: $base-color;
            }
        }
    }

    .nav__hamburger {
        width: 30px;
        height: 30px;
        display: none;
        flex-direction: column;
        justify-content: space-evenly;
        border: none;
        background: transparent;
        cursor: pointer;
        z-index: 111111;


        .line {
            height: 3px;
            width: 100%;
            background-color: $text-color;
            border-radius: 3px;
            transition: .2s;
        }

        &.active {
            .line {
                transition-delay: .1s;
            }

            .line:first-of-type {
                rotate: 45deg;
                translate: 0 6px
            }

            .line:nth-child(2) {
                opacity: 0;
            }

            .line:last-of-type {
                rotate: -45deg;
                translate: 0 -10px
            }
        }

        
    }

    @media screen and (max-width: 1150px) {
        padding: 0 40px;
        &--left {
            gap: 70px;

            .nav__links {
                gap: 30px;
            }
        }
    }

    @media screen and (max-width: 990px) {
        height: 80px;
        

        &--left {
            .nav__links {
                position: fixed;
                top: 0;
                left: -73%;
                width: 70%;
                height: 100vh;
                background: #9F9F9F;
                flex-direction: column;
                padding: 25% 0 10% 15%;
                border-radius: 0 0 60px 0;
                transition: .2s left ease-in-out;
                z-index: 100;

                .nav__link {
                    font-size: 20px;
                    color: $base-color;

                    &::after {
                        left: -10%;
                        bottom: 0;
                        top: 0;
                        height: 100%;
                    }
                }

            }
        }

        &--right {
            position: fixed;
            bottom: 0;
            left: -70%;
            width: 70%;
            height: 50vh;
            opacity: 0;
            flex-direction: column;
            justify-content: flex-end;
            align-items: flex-start;
            gap: 20px;
            padding: 10% 0 10% 15%;
            transition: .2s opacity ease-in-out;
            transition-delay: .1s;
            z-index: 101;

            .nav__contact span, .nav__language, .nav__button {
                margin: 0;
            }

            .nav__contact, 
            .nav__language {
                color: $base-color;
            }

            .nav__language {
                img {
                    filter: invert(100%) sepia(0%) saturate(4784%) hue-rotate(39deg) brightness(106%) contrast(103%);
                }
            }
        }

        .nav__hamburger {
            display: flex;
        }

        &.active {
            .nav--left {
                .nav__links {
                    left: 0;
                }
            }

            .nav--right {
                left: 0;
                opacity: 1;
            }
        }
    }

    @media screen and (max-width: 550px) {
        .nav--right {
            bottom: 50px;
            padding-left: 50px;
            font-size: 14px;
        }

        &--left {
            .nav__links {
                padding-left: 50px;
                .nav__link {
                    font-size: 16px;
                }
            }
        }
    }

    @media screen and (max-width: 300px) {
        .nav--right {
            bottom: 70px;
            padding-left: 30px;
            font-size: 12px;
        }

        &--left {
            .nav__links {
                padding-left: 30px;
                .nav__link {
                    font-size: 14px;
                }
            }
        }
    }
}

